--- a/Contacto.html
+++ b/Contacto.html
@@ -52,15 +52,19 @@
     <main class="contenedor sombra">  
 
         <h2>Redes Sociales</h2>
-        <section>
-            <div class="iconos2"> 
-                <a href="https://www.facebook.com/ezequiel.villalbapresa/"> <img src="images/facebook.png"> </a>
-                <a href="https://www.instagram.com/ttttrasher_/"> <img src="images/instagram.png"> </a> 
-                <a href="//wa.me/59892718805/?text=Hola!.%20Quisiera%20consultar%20sobre%20su%20curriculum%20online" > <img src="images/Whatsapp-logo-vetor.png"> </a>
-            </div>
-            <div class="iconos3"> 
-            </div>
-        </section>    
+                <!--iconos-->
+        <div class="grid__contactanos"> 
+            <a href="https://www.instagram.com/wat_da_trash_doin/" >    
+                <img class="icono1 imagen__contactanos" src="images/instagram.png" alt="Instagram icono" >
+            </a>
+            <a href="//wa.me/59892718805/?text=Hola!.%20Quisiera%20consultar%20sobre%20su%20curriculum%20online" >    
+                <img class="icono2 imagen__contactanos" src="images/whatsapp.png" alt="Whatsapp icono" >
+            </a>
+            <a href="https://www.facebook.com/ezequiel.villalbapresa/" >    
+                <img class="icono3 imagen__contactanos" src="images/facebook.png" alt="Facebook icono" >
+            </a>
+        </div>      
+
     </main>
     
     <footer class="footer">
