--- a/Conocimientos.html
+++ b/Conocimientos.html
@@ -54,13 +54,13 @@
         <h2>Diplomas y Titulos</h2>
         <section>
             <div class="servicio"> 
-                <a href="file:///C:/Users/Usuario/AppData/Local/Temp/FT%20UY%20-%20Fundamentos%20de%20Programaci%C3%B3n.pdf">FT UY - Fundamentos de Programación</a>
-                <b></b>
-                <a href="file:///C:/Users/Usuario/AppData/Local/Temp/FT%20UY%20-%20Dise%C3%B1o%20Web%20con%20HTML5%20+%20CSS.pdf">FT UY - Diseño Web con HTML5 + CSS</a>
-                <b></b>
+                <p>FT UY - Fundamentos de Programación</p>
+                <p>FT UY - Diseño Web con HTML5 + CSS</p>
+                <p>CoderHouse - Desarrollo web</p>
+                <p>Udemy - Desarrollo Web Completo</p>
                 <h2>Proyectos</h2>
                 <p>Mis proyectos están publicados en Github, puedes visitar el link o descargarlos.</p>
-                <a class="boton" href="https://github.com/Daaaaand/Conocimientos">Visitar link</a>
+                <a class="boton" href="https://github.com/Daaaaand?tab=repositories">Visitar link</a>
                 <a class="boton" href="download/Conocimientos-main.zip">Descargar archivos</a>
             </div>    
         </section>
