--- a/Conocimientos.html
+++ b/Conocimientos.html
@@ -50,14 +50,15 @@
     
 
     <main class="contenedor sombra">  
-
         <h2>Diplomas y Titulos</h2>
         <section>
             <div class="servicio"> 
                 <p>FT UY - Fundamentos de Programación</p>
                 <p>FT UY - Diseño Web con HTML5 + CSS</p>
                 <p>CoderHouse - Desarrollo web</p>
-                <p>Udemy - Desarrollo Web Completo</p>
+                <p>Udemy - Desarrollo Web Full Stack </p>
+                <h2>CV</h2>
+                <a href="download/EZEQUIEL VILLALBA curriculum.pdf">Curriculum Vitae - Link</a>
                 <h2>Proyectos</h2>
                 <p>Mis proyectos están publicados en Github, puedes visitar el link o descargarlos.</p>
                 <a class="boton" href="https://github.com/Daaaaand?tab=repositories">Visitar link</a>
